--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -4,17 +4,17 @@
 <h1>Home Template</h1>
 
 <div>
-  
+    
     <div>
         {% for room in rooms%}
         <div>
-
-            <span>@{{room}}</span>
+            <span>@{{room.id}}</span>
+           
             
             <!-- <h5>{{room.id}}--<a href="room/{{room.id}}">{{room.name}}</a></h5> -->
             <h5>{{room.id}}--<a href="{% url 'room' room.id %}">{{room.name}}</a></h5>
 
-            <small>{{room.id}}</small>
+            <small>{{room.topic.name}}</small>
 
             <hr>
         </div>
