--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -5,16 +5,18 @@
 
 <div>
     
+    <a href="{% url 'create-room'%}">Create room</a>
     <div>
         {% for room in rooms%}
         <div>
-            <span>@{{room.id}}</span>
+            <span>@{{room.host.username}}</span>
            
             
             <!-- <h5>{{room.id}}--<a href="room/{{room.id}}">{{room.name}}</a></h5> -->
             <h5>{{room.id}}--<a href="{% url 'room' room.id %}">{{room.name}}</a></h5>
 
             <small>{{room.topic.name}}</small>
+            
 
             <hr>
         </div>
