--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -5,7 +5,7 @@
 
 <div>
     
-    <a href="{% url 'create-room'%}">Create room</a>
+    <a href="{% url 'create-room'%}">Create Room</a>
     <div>
         {% for room in rooms%}
         <div>
