--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,2 +1,6 @@
 <a href="/"><span>Logo</span></a>
 
+<form method="GET" action="{% url 'home'%}">
+    <input type="text" name="q" placeholder="Search Rooms"/>
+</form>
+
