--- a/templates/main.html
+++ b/templates/main.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,8 +10,17 @@
 
 <body>
     {% include 'nav.html' %}
-    {%block content%}   
+    {% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+        <li></li>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+
+    {%block content%}
 
     {%endblock %}
 </body>
+
 </html>
